created configuration wizard

--- a/core/frontend/views/utils.jade
+++ b/core/frontend/views/utils.jade
@@ -27,6 +27,7 @@ mixin head
 mixin baseCss
   link(rel='stylesheet', href='bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='bootstrap/dist/css/bootstrap-theme.min.css')
+  link(rel='stylesheet', href='font-awesome/css/font-awesome.min.css')
   
 mixin baseScripts
   script(src='jquery/dist/jquery.js')
