sketch frontend modules, lacks lazy loading

--- a/core/frontend/modules/setup/views/index.jade
+++ b/core/frontend/modules/setup/views/index.jade
@@ -19,12 +19,12 @@
 
 doctype html
 html
-  include ../../views/utils
+  include ../../../views/utils
   +head
     +baseCss
     +baseScripts
+    +angularInjections(angularInjections)
     +moduleScripts(scripts)
-    +angularInjections(angularInjections)    
     body
       .jumbotron
         .container
