--- a/core/frontend/views/utils.jade
+++ b/core/frontend/views/utils.jade
@@ -34,6 +34,8 @@ mixin baseScripts
   script(src='jquery/dist/jquery.js')
   script(src='bootstrap/dist/js/bootstrap.js')
   script(src='angular/angular.js')
+  script(src='angular-bootstrap/ui-bootstrap-tpls.js')
+  script(src='oclazyload/dist/ocLazyLoad.js')
 
 mixin moduleScripts(scripts)
   if (scripts)
