lazy loading login on unathorized request

--- a/core/frontend/modules/admin/views/index.jade
+++ b/core/frontend/modules/admin/views/index.jade
@@ -7,7 +7,7 @@
       it under the terms of the GNU Affero General Public License as published by
       the Free Software Foundation, either version 3 of the License, or
       (at your option) any later version.
-      
+
       Planète is distributed in the hope that it will be useful,
       but WITHOUT ANY WARRANTY; without even the implied warranty of
       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
@@ -17,14 +17,4 @@
       along with along with planète.  If not, see <http://www.gnu.org/licenses/>.  If not, see <http://www.gnu.org/licenses/>
 -//
 
-doctype html
-html
-  include ./utils
-  +head
-    +baseCss
-    +baseScripts
-    +angularInjections(angularInjections)
-    +moduleScripts(scripts)
-    body(ng-app='planete' ng-controller= 'planeteController')
-      button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
-      a.btn.btn-primary(href='#/admin') #[.fa.fa-lock] Admin
+| THIS IS THE ADMIN PAGE
