open login popup when unauthorized

--- a/core/frontend/views/index.jade
+++ b/core/frontend/views/index.jade
@@ -27,4 +27,4 @@ html
     +moduleScripts(scripts)
     body(ng-app='planete' ng-controller= 'planeteController')
       button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
-      a.btn.btn-primary(href='#/admin') #[.fa.fa-lock] Admin
+      button.btn.btn-primary(ng-click='admin()') #[.fa.fa-lock] Admin
