authentication forntend improved

--- a/core/frontend/views/index.jade
+++ b/core/frontend/views/index.jade
@@ -28,3 +28,5 @@ html
     body(ng-app='planete' ng-controller= 'planeteController')
       button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
       button.btn.btn-primary(ng-click='admin()') #[.fa.fa-lock] Admin
+
+      span(ng-show='$rootScope.isAuthenticated()')| Logged in as {{session()}}
