--- a/core/frontend/modules/auth/views/index.jade
+++ b/core/frontend/modules/auth/views/index.jade
@@ -20,24 +20,23 @@
 include ../../../views/utils
 +moduleScripts(scripts)
 
-#login-modal(ng-app = 'auth', ng-controller = 'loginController')
-  .modal-header
-    h3 #{__('You are not authorized to acess this ressource')}
-  .modal-body
-    .alert.alert-danger(ng-show="error")
-      .container
-        i.fa.fa-exclamation-triangle
-        |  {{error}}
-    | #{__('Please, log in')}
-    hr
-    form(name='form' role='form' novalidate)
-      .form-group(ng-class="{'has-error': form.username.$touched && form.username.$invalid}")
-        label(for='username') #{__('User name')}
-        input(ng-model='credentials.username' type='text' class='form-control' name='username', id='username' required)
-      .form-group(ng-class="{'has-error': form.password.$touched && form.password.$invalid}")
-        label(for='password') #{__('User password')}
-        input(ng-model='credentials.password' type='password' class='form-control' name='password' id='password' required)
-  .modal-footer
-    button.btn.btn-primary(ng-disabled='!form.$valid', ng-click='form.$valid && login(credentials)') #{__('OK')}
-    |     
-    button.btn(ng-click='cancel()') #{__('Nah !')}
+.modal-header
+  h4 #{__('You are not authenticated')}
+.modal-body
+  .alert.alert-danger(ng-show="error")
+    .container
+      i.fa.fa-exclamation-triangle
+      |  {{error}}
+  | #{__('Please, log in...')}
+  hr
+  form(name='form' role='form' novalidate)
+    .form-group(ng-class="{'has-error': form.username.$touched && form.username.$invalid}")
+      label(for='username') #{__('User name')}
+      input(ng-model='credentials.username' type='text' class='form-control' name='username', id='username' required)
+    .form-group(ng-class="{'has-error': form.password.$touched && form.password.$invalid}")
+      label(for='password') #{__('User password')}
+      input(ng-model='credentials.password' type='password' class='form-control' name='password' id='password' required)
+.modal-footer
+  hr
+  button.btn.btn-primary(ng-disabled='!form.$valid', ng-click='form.$valid && login(credentials)') #{__('OK')}
+  button.btn.btn-default(ng-click='cancel()') #{__('Nah !')}
