frontend auth is an event machine, it retries the request after a successful login

--- a/core/frontend/modules/admin/views/index.jade
+++ b/core/frontend/modules/admin/views/index.jade
@@ -17,4 +17,4 @@
       along with along with planète.  If not, see <http://www.gnu.org/licenses/>.  If not, see <http://www.gnu.org/licenses/>
 -//
 
-| THIS IS THE ADMIN PAGE
+p THIS IS THE ADMIN PAGE
