--- a/core/frontend/views/index.jade
+++ b/core/frontend/views/index.jade
@@ -25,8 +25,9 @@ html
     +baseScripts
     +angularInjections(angularInjections)
     +moduleScripts(scripts)
-    body(ng-app='planete' ng-controller= 'planeteController')
-      button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
-      button.btn.btn-primary(ng-click='admin()') #[.fa.fa-lock] Admin
+  body(ng-app='planete' ng-controller= 'planeteController')
+    button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
+    a.btn.btn-primary(href='#/admin') #[.fa.fa-lock] Admin
 
-      span(ng-show='isAuthenticated()')| Logged in as {{session}}
+    span(ng-show='isAuthenticated()')| Logged in as {{session}}
+    ng-view
