improve authentication/authorization frontend module

--- a/core/frontend/views/index.jade
+++ b/core/frontend/views/index.jade
@@ -26,7 +26,9 @@ html
     +angularInjections(angularInjections)
     +moduleScripts(scripts)
   body(ng-app='planete' ng-controller= 'planeteController')
-    button.btn.btn-success(ng-click='login()') #[.fa.fa-key] Login
+    a.btn.btn-warning(href='#/hole') #[.fa.fa-home] Home
+    button.btn.btn-success(ng-click='login()', ng-hide='isAuthenticated()') #[.fa.fa-key] Login
+    button.btn.btn-danger(ng-click='logout()', ng-show='isAuthenticated()') #[.fa.fa-sign-out] Logout
     a.btn.btn-primary(href='#/admin') #[.fa.fa-lock] Admin
 
     span(ng-show='isAuthenticated()')| Logged in as {{session}}
