--- a/core/frontend/modules/auth/views/index.jade
+++ b/core/frontend/modules/auth/views/index.jade
@@ -36,7 +36,7 @@ include ../../../views/utils
     .form-group(ng-class="{'has-error': form.password.$touched && form.password.$invalid}")
       label(for='password') #{__('User password')}
       input(ng-model='credentials.password' type='password' class='form-control' name='password' id='password' required)
-.modal-footer
-  hr
-  button.btn.btn-primary(ng-disabled='!form.$valid', ng-click='form.$valid && login(credentials)') #{__('OK')}
-  button.btn.btn-default(ng-click='cancel()') #{__('Nah !')}
+    .modal-footer
+      hr
+      button.btn.btn-primary(type='submit', ng-disabled='!form.$valid', ng-click='form.$valid && login(credentials)') #{__('OK')}
+      button.btn.btn-default(ng-click='cancel()') #{__('Nah !')}
