sketch administration panel

--- a/core/frontend/modules/admin/views/index.jade
+++ b/core/frontend/modules/admin/views/index.jade
@@ -17,4 +17,16 @@
       along with along with planète.  If not, see <http://www.gnu.org/licenses/>.  If not, see <http://www.gnu.org/licenses/>
 -//
 
-p THIS IS THE ADMIN PAGE
+.panel
+  .container-fluid
+    h3 Welcome to the almighty administration panel
+    hr
+    ul.nav.nav-tabs.nav-justified
+      li.active
+        a(data-toggle='tab') #[i.fa.fa-users] Users
+      li.active
+        a(data-toggle='tab') #[i.fa.fa-cog] Config
+    .tab-content
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae suscipit justo. Maecenas id molestie tellus. Praesent eleifend purus ac velit placerat, ut lacinia nulla faucibus. Ut eget elementum leo. Mauris ut euismod sem. Praesent augue quam, luctus posuere varius eu, efficitur id purus. Nam in enim condimentum, efficitur enim cursus, mattis diam. Morbi quis mi rutrum ex condimentum suscipit. In sit amet quam interdum, iaculis erat tempus, mollis nulla.
+      p Nunc sed ligula nibh. Aenean ut diam non dui scelerisque lacinia id in nulla. Nullam consectetur tellus ut pharetra bibendum. Sed facilisis malesuada fermentum. Donec faucibus magna interdum, scelerisque risus vel, gravida nisl. Vestibulum vel porttitor enim, in consequat ligula. Morbi eleifend mi vitae sapien maximus, ac pretium erat mattis. Nulla facilisi. Morbi efficitur urna eget suscipit consectetur. Maecenas blandit lectus sed felis sagittis, nec aliquet magna aliquam.
+      p Quisque eget leo venenatis, porta ante vitae, tempor ipsum. Cras eget orci egestas, blandit lacus vel, gravida ex. Etiam bibendum ultrices ante, sit amet accumsan massa semper id. Curabitur eget nisl est. Sed venenatis quam a tellus congue viverra. Phasellus et cursus turpis. Vestibulum ac quam ut mi convallis finibus. Quisque tincidunt arcu at enim faucibus imperdiet. Maecenas tempus augue non ipsum varius, in laoreet nibh vestibulum. Donec congue, risus eu mollis maximus, sapien nisl bibendum lacus, in tristique orci urna id sapien. In eu auctor ante, non posuere ex. Nullam viverra rutrum nisl, sed laoreet purus posuere lacinia.
