--- a/core/frontend/modules/admin/views/users/index.jade
+++ b/core/frontend/modules/admin/views/users/index.jade
@@ -7,7 +7,7 @@
       it under the terms of the GNU Affero General Public License as published by
       the Free Software Foundation, either version 3 of the License, or
       (at your option) any later version.
-      
+
       Planète is distributed in the hope that it will be useful,
       but WITHOUT ANY WARRANTY; without even the implied warranty of
       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
@@ -17,19 +17,11 @@
       along with along with planète.  If not, see <http://www.gnu.org/licenses/>.  If not, see <http://www.gnu.org/licenses/>
 -//
 
-doctype html
-html
-  include ./utils
-  +head
-    +baseCss
-    +baseScripts
-    +angularInjections(angularInjections)
-    +moduleScripts(scripts)
-  body(ng-app='planete' ng-controller= 'planeteController')
-    a.btn.btn-warning(href='#/hole') #[.fa.fa-home] Home
-    button.btn.btn-success(ng-click='login()', ng-hide='isAuthenticated()') #[.fa.fa-key] Login
-    button.btn.btn-danger(ng-click='logout()', ng-show='isAuthenticated()') #[.fa.fa-sign-out] Logout
-    a.btn.btn-primary(href='#/admin') #[.fa.fa-lock] Admin
 
-    span(ng-show='isAuthenticated()')| Logged in as {{session}}
-    ng-view
+uib-tab()
+  uib-tab-heading #[i.fa.fa-users] Users
+
+  .container-fluid
+    button.btn.btn-primary #[i.fa.fa-user] New user
+    div(ng-repeat='user in users')
+      {{user.name}}
