add link to home in last step of installation process

--- a/core/frontend/modules/setup/views/index.jade
+++ b/core/frontend/modules/setup/views/index.jade
@@ -79,4 +79,4 @@ html
           div(ng-hide='step != 2')
             .form-container
               h2 #{__('Great! The setup is complete')}.
-              .text-primary #{__('Please reload this page to get started with Planète.')}
+              a.text-primary(href='#') #{__('Please click here to get started with Planète.')}
