--- a/core/frontend/modules/admin/views/users/index.jade
+++ b/core/frontend/modules/admin/views/users/index.jade
@@ -31,8 +31,11 @@ uib-tab
               th
           tbody
             tr(ng-repeat='user in users')
-              td {{user.username}}
-              td {{ user.roles }}
+              td {{ user.username}}
+              td
+                table
+                  tr(ng-repeat='role in user.roles')
+                    td {{ role.role.name }} at {{ role.domain.name }}
               td {{ user.timestamps.creation | date }}
               td.text-right
                 .btn-group #[button.btn.btn-default.fa.fa-pencil-square-o] #[button.btn.btn-default.fa.fa-trash-o(ng-click = 'deleteUser(user)')]
