--- a/core/frontend/modules/admin/views/index.jade
+++ b/core/frontend/modules/admin/views/index.jade
@@ -22,7 +22,7 @@
     h3 Welcome to the almighty administration panel
     hr
     uib-tabset
-      include users/index.jade
+      include ../modules/users/views/index.jade
 
       uib-tab
         uib-tab-heading #[i.fa.fa-cog] Config
