route to content

--- a/core/frontend/views/utils.jade
+++ b/core/frontend/views/utils.jade
@@ -42,6 +42,8 @@ mixin baseScripts
   script(src='angular-route/angular-route.js')
   script(src='angular-bootstrap/ui-bootstrap-tpls.js')
   script(src='oclazyload/dist/ocLazyLoad.js')
+  script(src='angular-sanitize/angular-sanitize.js')
+  script(src='showdown/dist/showdown.js')
   
   script(src='modules/auth/js/app.js')
 
