--- a/core/frontend/modules/admin/views/index.jade
+++ b/core/frontend/modules/admin/views/index.jade
@@ -23,6 +23,7 @@
     hr
     uib-tabset
       include ../modules/users/views/index.jade
+      include ../modules/content/views/index.jade
 
       uib-tab
         uib-tab-heading #[i.fa.fa-cog] Config
