auto-load admin panel tabs (incomplete)

--- a/core/frontend/modules/admin/modules/content/views/header.jade
+++ b/core/frontend/modules/admin/modules/content/views/header.jade
@@ -17,8 +17,4 @@
       along with along with planète.  If not, see <http://www.gnu.org/licenses/>.  If not, see <http://www.gnu.org/licenses/>
 -//
 
-div(oc-lazy-load='modules/admin/modules/users/js/app.js')  
-  .container-fluid(ng-controller='adminUsersController', ng-init='showList = true')
-    button.btn.btn-primary(ng-show="showList", ng-click='showList = false') #[i.fa.fa-user] New user
-    user-list(ng-show="showList")
-    new-user(ng-show="!showList")
+| #[i.fa.fa-file-text-o] Content
